--- a/.eslintrc
+++ b/.eslintrc
@@ -6,9 +6,16 @@
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
+    "requireConfigFile": false,
     "ecmaFeatures": {
       "jsx": true,
       "experimentalObjectRestSpread": true
+    },
+    "parser": "@babel/eslint-parser",
+    "babelOptions": {
+      "parserOpts": {
+        "plugins": ["jsx", "js"]
+      }
     }
   },
   "env": {
@@ -18,14 +25,14 @@
   },
   "parser": "@babel/eslint-parser",
   "rules": {
-    "template-curly-spacing" : "off",
-    indent : "off",
+    "template-curly-spacing": "off",
+    "indent": "off",
     "no-nested-ternary": 0,
     "react/no-unstable-nested-components": 0,
     "import/no-unresolved": 0,
     "import/no-named-as-default": 0,
     "no-unused-expressions": 0,
-    "comma-dangle": 0,  // not sure why airbnb turned this on. gross!
+    "comma-dangle": 0, // not sure why airbnb turned this on. gross!
     "no-console": 0,
     "no-alert": 0,
     "react/jsx-no-bind": 0,
@@ -52,10 +59,10 @@
     "jsx-a11y/anchor-is-valid": 0,
     "react/default-props-match-prop-types": 0,
     "arrow-parens": 0,
-    "jsx-a11y/label-has-for": [ 2, {
-        "required": {
-            "every": [ "id" ]
-        },
+    "jsx-a11y/label-has-for": [2, {
+      "required": {
+        "every": ["id"]
+      },
     }],
     "linebreak-style": 0
   },
