--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@babel/core": "^7.16.5",
     "@babel/eslint-parser": "^7.16.5",
+    "@babel/preset-react": "^7.18.6",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/styles": "^4.1.1",
@@ -34,8 +35,8 @@
     "jss-rtl": "^0.3.0",
     "next": "^11.0.1",
     "next-i18next": "10.0.1",
-    "next-language-detector": "1.0.0",
     "next-images": "^1.1.2",
+    "next-language-detector": "1.0.0",
     "next-page-transitions": "^1.0.0-beta.2",
     "pre-commit": "^1.2.2",
     "prop-types": "^15.7.2",
