--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,8 @@
   "extends": [
     "eslint-config-airbnb",
     "plugin:flowtype/recommended",
+    "next/core-web-vitals",
+    "next/babel",
     "next/core-web-vitals"
   ],
   "parserOptions": {
