--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "19.0.2",
+    "eslint-config-next": "^13.1.1",
     "eslint-config-prettier": "5.0.0",
     "eslint-import-resolver-webpack": "0.13.2",
     "eslint-plugin-flowtype": "^3.10.3",
