--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build",
     "export": "next export",
     "start": "next start -p 3000",
-    "now-build": "next build && next export -o dist"
+    "now-build": "NODE_OPTIONS=--openssl-legacy-provider next build && next export -o dist"
   },
   "dependencies": {
     "@babel/core": "^7.16.5",
