--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/styles": "^4.1.1",
     "animate.css": "^3.7.2",
+    "aos": "^2.3.4",
     "babel-plugin-root-import": "^6.4.1",
     "clsx": "^1.0.4",
     "cross-env": "^7.0.3",
@@ -51,6 +52,7 @@
     "react-scroll-parallax": "^2.1.2",
     "react-scrollspy": "^3.4.2",
     "react-slick": "0.25.0",
+    "react-tooltip": "^5.5.2",
     "react-top-loading-bar": "^2.1.0",
     "slick-carousel": "^1.8.1"
   },
