--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/styles": "^4.1.1",
+    "@tippyjs/react": "^4.2.6",
     "animate.css": "^3.7.2",
     "aos": "^2.3.4",
     "babel-plugin-root-import": "^6.4.1",
@@ -52,9 +53,10 @@
     "react-scroll-parallax": "^2.1.2",
     "react-scrollspy": "^3.4.2",
     "react-slick": "0.25.0",
-    "react-tooltip": "^5.5.2",
+    "react-tooltip": "^5.7.0",
     "react-top-loading-bar": "^2.1.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
