--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "starter-project",
+  "name": "halal-staff",
   "version": "2.3.3",
-  "description": "Luxi ReactJs Starter Project",
+  "description": "Halal Staff",
   "keywords": [
-    "starter kit",
-    "empty project",
-    "starter kit",
-    "kick start",
+    "Halal Staff",
+    "Halal",
+    "agroholdings",
+    "chiken",
     "boilerplate"
   ],
   "author": "Luxi Theme",
