--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "chiken",
     "boilerplate"
   ],
-  "author": "Luxi Theme",
+  "author": "Rin Kulaev",
   "license": "Envato",
   "main": "index.js",
   "private": true,
